--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </article>
       <article id="route">
         <h1>Route</h1>
+	<img src="route.jpg" />
       </article>
       <article id="manifest">
         <h1>manifesto</h1>
