--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <header>
       Mars voor Moeder Aarde
+      <img src="logo.png" id="logo" />
     </header>
     <aside id="menu">
       <nav>
@@ -41,6 +42,7 @@
       </article>
       <article id="programma">
         <h1>programma</h1>
+	<p>Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het bekijken van de layout van een pagina, afgeleid wordt door de tekstuele inhoud. Het belangrijke punt van het gebruik van Lorem Ipsum is dat het uit een min of meer normale verdeling van letters bestaat, in tegenstelling tot "Hier uw tekst, hier uw tekst" wat het tot min of meer leesbaar nederlands maakt. Veel desktop publishing pakketten en web pagina editors gebruiken tegenwoordig Lorem Ipsum als hun standaard model tekst, en een zoekopdracht naar "lorem ipsum" ontsluit veel websites die nog in aanbouw zijn. Verscheidene versies hebben zich ontwikkeld in de loop van de jaren, soms per ongeluk soms expres (ingevoegde humor en dergelijke).</p>
       </article>
       <article id="contact">
         <h1>contact</h1>
