--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Mars voor Moeder Aarde</title>
+    <title><FONT SIZE="3"> Mars voor Moeder Aarde</FONT></title>
     <meta name="description" content="mars voor moeder aarde en tegen monsanto">
     <link rel="stylesheet" href="style.css">
   </head>
