--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><FONT SIZE="3"> Mars voor Moeder Aarde</FONT></title>
+    <title><font face="Verdana" color="#0000FF" size="7"><b> Mars voor Moeder Aarde
+</b></font></title>
     <meta name="description" content="mars voor moeder aarde en tegen monsanto">
     <link rel="stylesheet" href="style.css">
   </head>
