poging font en size "mars v moeder aarde" te wijzigen

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title><font face="Verdana" color="#0000FF" size="7"><b> Mars voor Moeder Aarde
-</b></font></title>
+    <title>Mars voor Moeder Aarde</title>
     <meta name="description" content="mars voor moeder aarde en tegen monsanto">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      Mars voor Moeder Aarde
+     <font face="Verdana" color="#0000FF" size="7"><b> Mars voor Moeder Aarde
+</b></font> Mars voor Moeder Aarde
       <img src="logo.png" id="logo" />
     </header>
     <aside id="menu">
