Background color and PINK letters

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<body bgcolor="#FFFF99">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,8 @@
   </head>
   <body>
     <header>
-     <font face="Verdana" color="#0000FF" size="7"><b> Mars voor Moeder Aarde
-</b></font> Mars voor Moeder Aarde
+     <font face="Verdana" color="#FF6666" size="7"><b> Mars voor Moeder Aarde
+</b></font>
       <img src="logo.png" id="logo" />
     </header>
     <aside id="menu">
