Groene letters MvM

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-     <font face="Verdana" color="#FF6666" size="7"><b> Mars voor Moeder Aarde
+     <font face="Verdana" color="#00ff66" size="7"><b> Mars voor Moeder Aarde
 </b></font>
       <img src="logo.png" id="logo" />
     </header>
