--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor="#FFFF99">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+  <BODY background="grasmat.jpg">
     <header>
      <font face="Verdana" color="#00ff66" size="7"><b> Mars voor Moeder Aarde
 </b></font>
@@ -18,14 +18,14 @@
     </header>
     <aside id="menu">
       <nav>
-        <a href="#" title="alles op een rijtje">wat dan</a>
-        <a href="#route" title="route">route</a>
-        <a href="#manifest" title="waarom doen we wat we doen">manifesto</a>
-        <a href="#tribunaal" title="lees meer over het tribunaal">het tribunaal</a>
-        <a href="#programma" title="programma">programma</a>
-        <a href="http://www.marchagainstmonsanto.nl" title="landelijke site">MaM NL</a>
-        <a href="http://www.march-against-monsanto.com" title="marches all over the world">internationaal</a>
-        <a href="#contact" title="laat je horen">contact</a>
+        <a href="#" title="alles op een rijtje">Wat is dit allemaal?</a>
+        <a href="#route" title="route">Route</a>
+        <a href="#manifest" title="waarom doen we wat we doen">Waarom een mars?</a>
+        <a href="#tribunaal" title="lees meer over het tribunaal">Het tribunaal</a>
+        <a href="#programma" title="programma">Programma</a>
+        <a href="http://www.marchagainstmonsanto.nl" title="landelijke site">March Against Monsanto NL</a>
+        <a href="http://www.march-against-monsanto.com" title="marches all over the world">Internationaal</a>
+        <a href="#contact" title="laat je horen">Contact</a>
       </nav>
     </aside>
     <section id="main">
