--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   <body>
   <BODY background="grasmat.jpg">
     <header>
-     <font face="Verdana" color="#00ff66" size="7"><b> Mars voor Moeder Aarde
+     <font face="Verdana" color="#00ff66" size="7"><b>  <img src="mam lettertype.png" id="logo" />
 </b></font>
-      <img src="logo.png" id="logo" />
+	<br>
+	<br>
+	<br>
+      <img src="mam blad logo.png" id="logo" />
     </header>
     <aside id="menu">
       <nav>
