--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
   <BODY background="grasmat.jpg">
     <header>
-     <font face="Verdana" color="#00ff66" size="7"><b>  <img src="mam lettertype.png" id="logo" />
+     <font face="Verdana" color="#00ff66" size="7"><b>  <img src="mam lettertype.pnd" id="logo" />
 </b></font>
 	<br>
 	<br>
 	<br>
-      <img src="mam blad logo.png" id="logo" />
+      <img src="mam blad logo.pnd" id="logo" />
     </header>
     <aside id="menu">
       <nav>
