--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
     </header>
     <aside id="menu">
       <nav>
-        <a href="#" title="alles op een rijtje">Wat is dit allemaal?</a>
-        <a href="#route" title="route">Route</a>
-        <a href="#manifest" title="waarom doen we wat we doen">Waarom een mars?</a>
-        <a href="#tribunaal" title="lees meer over het tribunaal">Het tribunaal</a>
-        <a href="#programma" title="programma">Programma</a>
-        <a href="http://www.marchagainstmonsanto.nl" title="landelijke site">March Against Monsanto NL</a>
-        <a href="http://www.march-against-monsanto.com" title="marches all over the world">Internationaal</a>
-        <a href="#contact" title="laat je horen">Contact</a>
+        <a href="#" title="Wat is dit allemaal?">Alles op een rijtje?</a>
+        <a href="#route" title="Route">Route van de mars</a>
+        <a href="#manifest" title="Waarom een mars?">Manifesto</a>
+        <a href="#tribunaal" title="Het Internationaal Triubnaal">Het tribunaal</a>
+        <a href="#programma" title="Rrogramma">Programma</a>
+        <a href="http://www.marchagainstmonsanto.nl" title="March Against Monsanto NL">landelijke site</a>
+        <a href="http://www.march-against-monsanto.com" title="Internationaal">Marches all over the world</a>
+        <a href="#contact" title="Contact">Laat je horen!</a>
       </nav>
     </aside>
     <section id="main">
       <article>
-        <h1>Alles op een rijtje?</h1>
+        <h1>Wat is dit allemaal?</h1>
       </article>
-      <article id="route">
+      <article id="Route">
         <h1>Route</h1>
 	<img src="route.jpg" />
       </article>
-      <article id="manifest">
+      <article id="Waarom een mars">
         <h1>manifesto</h1>
       </article>
-      <article id="tribunaal">
+      <article id="Het Internationaal Tribunaal">
         <h1>tribunaal</h1>
       </article>
-      <article id="programma">
+      <article id="Programma">
         <h1>programma</h1>
 	<p>Het is al geruime tijd een bekend gegeven dat een lezer, tijdens het bekijken van de layout van een pagina, afgeleid wordt door de tekstuele inhoud. Het belangrijke punt van het gebruik van Lorem Ipsum is dat het uit een min of meer normale verdeling van letters bestaat, in tegenstelling tot "Hier uw tekst, hier uw tekst" wat het tot min of meer leesbaar nederlands maakt. Veel desktop publishing pakketten en web pagina editors gebruiken tegenwoordig Lorem Ipsum als hun standaard model tekst, en een zoekopdracht naar "lorem ipsum" ontsluit veel websites die nog in aanbouw zijn. Verscheidene versies hebben zich ontwikkeld in de loop van de jaren, soms per ongeluk soms expres (ingevoegde humor en dergelijke).</p>
       </article>
