--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     <meta name="description" content="mars voor moeder aarde en tegen monsanto">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-  <BODY background="grasmat.jpg">
-    <header>
-     <font face="Verdana" color="#00ff66" size="7"><b>  <img src="mam lettertype.jpg" id="logo" />
-</b></font>
+  <body><font face="Verdana" color="#00ff66" size="7"><b>  <img src="Logo met naam nr 3.jpg" id="logo" /></body>
+   	<br>
 	<br>
 	<br>
 	<br>
-      <img src="mam blad logo.jpg" id="logo" />
     </header>
+    <BODY background="grasmat.jpg">
     <aside id="menu">
       <nav>
         <a href="#" title="Wat is dit allemaal?">Alles op een rijtje?</a>
