--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="mars voor moeder aarde en tegen monsanto">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body><font face="Verdana" color="#00ff66" size="7"><b>  <img src="Logo met naam nr 3.jpg" id="logo" /></body>
+  <body><font face="Verdana" color="#00ff66" size="7"><b>  <img src="Logo worldpress2.png" id="logo" /></body>
    	<br>
 	<br>
 	<br>
