--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <meta name="description" content="mars voor moeder aarde en tegen monsanto">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body><font face="Verdana" color="#00ff66" size="7"><b>  <img src="Logo worldpress2.png" id="logo" /></body>
-   	<br>
-	<br>
-	<br>
-	<br>
+  <body>
+    <header>
+    	<img src="Logo worldpress2.png" id="logo" />
     </header>
-    <BODY background="grasmat.jpg">
     <aside id="menu">
       <nav>
         <a href="#" title="Wat is dit allemaal?">Alles op een rijtje?</a>
