fixed image source

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-    	<img src="Logo worldpress2.png" id="logo" />
+    	<img src="logo worldpress2.png" id="logo" />
     </header>
     <aside id="menu">
       <nav>
